# hyprtabs

./: CMakeLists.txt  README.md  README_CPP.md  build.sh  hyprland-config.conf  hyprland-rules.conf  hyprtabs  hyprtabs-runner  hyprtabs.py  install.sh  main.rs  test_layer_shell.py  test_mouse_clicks.py
hyprtabs/: constants.py  hyprland.py  singleton.py  ui.py  window.py
include/: singleton_manager.h  window.h
src/: constants.cpp  constants.h  hyprland_manager.cpp  hyprland_manager.h  main.cpp  singleton_manager.cpp  ui_manager.cpp  ui_manager.h  window.cpp  window.h
